// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert dynamic fields 1`] = `
Array [
  Object {
    "config": Object {
      "description": "",
      "schema": Object {
        "fields": Array [
          Object {
            "description": "The build number of the app, for example 8293",
            "mode": "REQUIRED",
            "name": "context_app_build",
            "type": "STRING",
          },
          Object {
            "description": "The name of the app, for example Hedvig, Ugglan",
            "mode": "REQUIRED",
            "name": "context_app_name",
            "type": "STRING",
          },
          Object {
            "description": "The namespace of the app, for example com.hedvig.app",
            "mode": "REQUIRED",
            "name": "context_app_namespace",
            "type": "STRING",
          },
          Object {
            "description": "The version of the app, for example 7.6.0",
            "mode": "REQUIRED",
            "name": "context_app_version",
            "type": "STRING",
          },
          Object {
            "description": "The manufacturer of the device, for example Samsung or Apple",
            "mode": "NULLABLE",
            "name": "context_device_manufacturer",
            "type": "STRING",
          },
          Object {
            "description": "The model of device, for example iPhone13,3",
            "mode": "NULLABLE",
            "name": "context_device_model",
            "type": "STRING",
          },
          Object {
            "description": "The name of the device, for example iPhone",
            "mode": "NULLABLE",
            "name": "context_device_name",
            "type": "STRING",
          },
          Object {
            "description": "The type of device, for example ios or android",
            "mode": "NULLABLE",
            "name": "context_device_type",
            "type": "STRING",
          },
          Object {
            "description": "The users IP address",
            "mode": "REQUIRED",
            "name": "context_ip",
            "type": "STRING",
          },
          Object {
            "description": "The locale that was current, for example en-SE",
            "mode": "REQUIRED",
            "name": "context_locale",
            "type": "STRING",
          },
          Object {
            "description": "OS name for example Android, iOS, iPadOS, MacOS, Windows",
            "mode": "REQUIRED",
            "name": "context_os_name",
            "type": "STRING",
          },
          Object {
            "description": "OS version for example 15.0.1 for iOS 15.0.1",
            "mode": "REQUIRED",
            "name": "context_os_version",
            "type": "STRING",
          },
          Object {
            "description": "Pixel density of screen",
            "mode": "NULLABLE",
            "name": "context_screen_density",
            "type": "INTEGER",
          },
          Object {
            "description": "Height of screen in pixels",
            "mode": "NULLABLE",
            "name": "context_screen_height",
            "type": "INTEGER",
          },
          Object {
            "description": "Width of screen in pixels",
            "mode": "NULLABLE",
            "name": "context_screen_width",
            "type": "INTEGER",
          },
          Object {
            "description": "An id which is preserved across a session, when application is closed a new id is generated",
            "mode": "REQUIRED",
            "name": "context_session_id",
            "type": "STRING",
          },
          Object {
            "description": "Timezone of device",
            "mode": "REQUIRED",
            "name": "context_timezone",
            "type": "STRING",
          },
          Object {
            "description": "Member id associated with the event",
            "mode": "NULLABLE",
            "name": "context_traits_member_id",
            "type": "STRING",
          },
          Object {
            "description": "String name of event, for example screen_view_offer",
            "mode": "REQUIRED",
            "name": "event",
            "type": "STRING",
          },
          Object {
            "description": "Unique ID of the event",
            "mode": "REQUIRED",
            "name": "event_id",
            "type": "STRING",
          },
          Object {
            "description": "Time when event happened",
            "mode": "REQUIRED",
            "name": "timestamp",
            "type": "TIMESTAMP",
          },
          Object {
            "description": "Tracking id, also called DeviceID in some contexes, use this primarily to identify a singular user",
            "mode": "REQUIRED",
            "name": "tracking_id",
            "type": "STRING",
          },
        ],
      },
      "timePartitioning": Object {
        "expirationMS": "7776000000",
        "field": "timestamp",
        "type": "DAY",
      },
    },
    "name": "embark_track",
    "rows": Array [],
  },
]
`;

exports[`insert dynamic fields 2`] = `
Array [
  Object {
    "config": Object {
      "description": "",
      "schema": Object {
        "fields": Array [
          Object {
            "description": "The build number of the app, for example 8293",
            "mode": "REQUIRED",
            "name": "context_app_build",
            "type": "STRING",
          },
          Object {
            "description": "The name of the app, for example Hedvig, Ugglan",
            "mode": "REQUIRED",
            "name": "context_app_name",
            "type": "STRING",
          },
          Object {
            "description": "The namespace of the app, for example com.hedvig.app",
            "mode": "REQUIRED",
            "name": "context_app_namespace",
            "type": "STRING",
          },
          Object {
            "description": "The version of the app, for example 7.6.0",
            "mode": "REQUIRED",
            "name": "context_app_version",
            "type": "STRING",
          },
          Object {
            "description": "The manufacturer of the device, for example Samsung or Apple",
            "mode": "NULLABLE",
            "name": "context_device_manufacturer",
            "type": "STRING",
          },
          Object {
            "description": "The model of device, for example iPhone13,3",
            "mode": "NULLABLE",
            "name": "context_device_model",
            "type": "STRING",
          },
          Object {
            "description": "The name of the device, for example iPhone",
            "mode": "NULLABLE",
            "name": "context_device_name",
            "type": "STRING",
          },
          Object {
            "description": "The type of device, for example ios or android",
            "mode": "NULLABLE",
            "name": "context_device_type",
            "type": "STRING",
          },
          Object {
            "description": "The users IP address",
            "mode": "REQUIRED",
            "name": "context_ip",
            "type": "STRING",
          },
          Object {
            "description": "The locale that was current, for example en-SE",
            "mode": "REQUIRED",
            "name": "context_locale",
            "type": "STRING",
          },
          Object {
            "description": "OS name for example Android, iOS, iPadOS, MacOS, Windows",
            "mode": "REQUIRED",
            "name": "context_os_name",
            "type": "STRING",
          },
          Object {
            "description": "OS version for example 15.0.1 for iOS 15.0.1",
            "mode": "REQUIRED",
            "name": "context_os_version",
            "type": "STRING",
          },
          Object {
            "description": "Pixel density of screen",
            "mode": "NULLABLE",
            "name": "context_screen_density",
            "type": "INTEGER",
          },
          Object {
            "description": "Height of screen in pixels",
            "mode": "NULLABLE",
            "name": "context_screen_height",
            "type": "INTEGER",
          },
          Object {
            "description": "Width of screen in pixels",
            "mode": "NULLABLE",
            "name": "context_screen_width",
            "type": "INTEGER",
          },
          Object {
            "description": "An id which is preserved across a session, when application is closed a new id is generated",
            "mode": "REQUIRED",
            "name": "context_session_id",
            "type": "STRING",
          },
          Object {
            "description": "Timezone of device",
            "mode": "REQUIRED",
            "name": "context_timezone",
            "type": "STRING",
          },
          Object {
            "description": "Member id associated with the event",
            "mode": "NULLABLE",
            "name": "context_traits_member_id",
            "type": "STRING",
          },
          Object {
            "description": "String name of event, for example screen_view_offer",
            "mode": "REQUIRED",
            "name": "event",
            "type": "STRING",
          },
          Object {
            "description": "Unique ID of the event",
            "mode": "REQUIRED",
            "name": "event_id",
            "type": "STRING",
          },
          Object {
            "description": "",
            "mode": "NULLABLE",
            "name": "property_store_hello",
            "type": "STRING",
          },
          Object {
            "description": "",
            "mode": "NULLABLE",
            "name": "property_store_personal_number",
            "type": "STRING",
          },
          Object {
            "description": "Time when event happened",
            "mode": "REQUIRED",
            "name": "timestamp",
            "type": "TIMESTAMP",
          },
          Object {
            "description": "Tracking id, also called DeviceID in some contexes, use this primarily to identify a singular user",
            "mode": "REQUIRED",
            "name": "tracking_id",
            "type": "STRING",
          },
        ],
      },
      "timePartitioning": Object {
        "expirationMS": "7776000000",
        "field": "timestamp",
        "type": "DAY",
      },
    },
    "name": "embark_track",
    "rows": Array [],
  },
]
`;

exports[`insert dynamic fields 3`] = `
Array [
  Object {
    "config": Object {
      "description": "",
      "schema": Object {
        "fields": Array [
          Object {
            "description": "The build number of the app, for example 8293",
            "mode": "REQUIRED",
            "name": "context_app_build",
            "type": "STRING",
          },
          Object {
            "description": "The name of the app, for example Hedvig, Ugglan",
            "mode": "REQUIRED",
            "name": "context_app_name",
            "type": "STRING",
          },
          Object {
            "description": "The namespace of the app, for example com.hedvig.app",
            "mode": "REQUIRED",
            "name": "context_app_namespace",
            "type": "STRING",
          },
          Object {
            "description": "The version of the app, for example 7.6.0",
            "mode": "REQUIRED",
            "name": "context_app_version",
            "type": "STRING",
          },
          Object {
            "description": "The manufacturer of the device, for example Samsung or Apple",
            "mode": "NULLABLE",
            "name": "context_device_manufacturer",
            "type": "STRING",
          },
          Object {
            "description": "The model of device, for example iPhone13,3",
            "mode": "NULLABLE",
            "name": "context_device_model",
            "type": "STRING",
          },
          Object {
            "description": "The name of the device, for example iPhone",
            "mode": "NULLABLE",
            "name": "context_device_name",
            "type": "STRING",
          },
          Object {
            "description": "The type of device, for example ios or android",
            "mode": "NULLABLE",
            "name": "context_device_type",
            "type": "STRING",
          },
          Object {
            "description": "The users IP address",
            "mode": "REQUIRED",
            "name": "context_ip",
            "type": "STRING",
          },
          Object {
            "description": "The locale that was current, for example en-SE",
            "mode": "REQUIRED",
            "name": "context_locale",
            "type": "STRING",
          },
          Object {
            "description": "OS name for example Android, iOS, iPadOS, MacOS, Windows",
            "mode": "REQUIRED",
            "name": "context_os_name",
            "type": "STRING",
          },
          Object {
            "description": "OS version for example 15.0.1 for iOS 15.0.1",
            "mode": "REQUIRED",
            "name": "context_os_version",
            "type": "STRING",
          },
          Object {
            "description": "Pixel density of screen",
            "mode": "NULLABLE",
            "name": "context_screen_density",
            "type": "INTEGER",
          },
          Object {
            "description": "Height of screen in pixels",
            "mode": "NULLABLE",
            "name": "context_screen_height",
            "type": "INTEGER",
          },
          Object {
            "description": "Width of screen in pixels",
            "mode": "NULLABLE",
            "name": "context_screen_width",
            "type": "INTEGER",
          },
          Object {
            "description": "An id which is preserved across a session, when application is closed a new id is generated",
            "mode": "REQUIRED",
            "name": "context_session_id",
            "type": "STRING",
          },
          Object {
            "description": "Timezone of device",
            "mode": "REQUIRED",
            "name": "context_timezone",
            "type": "STRING",
          },
          Object {
            "description": "Member id associated with the event",
            "mode": "NULLABLE",
            "name": "context_traits_member_id",
            "type": "STRING",
          },
          Object {
            "description": "String name of event, for example screen_view_offer",
            "mode": "REQUIRED",
            "name": "event",
            "type": "STRING",
          },
          Object {
            "description": "Unique ID of the event",
            "mode": "REQUIRED",
            "name": "event_id",
            "type": "STRING",
          },
          Object {
            "description": "",
            "mode": "NULLABLE",
            "name": "property_store_hello",
            "type": "STRING",
          },
          Object {
            "description": "",
            "mode": "NULLABLE",
            "name": "property_store_personal_number",
            "type": "STRING",
          },
          Object {
            "description": "Time when event happened",
            "mode": "REQUIRED",
            "name": "timestamp",
            "type": "TIMESTAMP",
          },
          Object {
            "description": "Tracking id, also called DeviceID in some contexes, use this primarily to identify a singular user",
            "mode": "REQUIRED",
            "name": "tracking_id",
            "type": "STRING",
          },
        ],
      },
      "timePartitioning": Object {
        "expirationMS": "7776000000",
        "field": "timestamp",
        "type": "DAY",
      },
    },
    "name": "embark_track",
    "rows": Array [],
  },
]
`;

exports[`insert dynamic fields in aggregate 1`] = `
Array [
  Object {
    "config": Object {
      "description": "",
      "schema": Object {
        "fields": Array [
          Object {
            "description": "String name of event, for example screen_view_offer",
            "mode": "REQUIRED",
            "name": "event",
            "type": "STRING",
          },
          Object {
            "description": "Unique ID of the event",
            "mode": "REQUIRED",
            "name": "event_id",
            "type": "STRING",
          },
          Object {
            "description": "Time when event happened",
            "mode": "REQUIRED",
            "name": "timestamp",
            "type": "TIMESTAMP",
          },
          Object {
            "description": "Tracking id, also called DeviceID in some contexes, use this primarily to identify a singular user",
            "mode": "REQUIRED",
            "name": "tracking_id",
            "type": "STRING",
          },
        ],
      },
      "timePartitioning": Object {
        "expirationMS": "7776000000",
        "field": "timestamp",
        "type": "DAY",
      },
    },
    "name": "aggregate",
    "rows": Array [],
  },
  Object {
    "config": Object {
      "description": "",
      "schema": Object {
        "fields": Array [
          Object {
            "description": "String name of event, for example screen_view_offer",
            "mode": "REQUIRED",
            "name": "event",
            "type": "STRING",
          },
          Object {
            "description": "Unique ID of the event",
            "mode": "REQUIRED",
            "name": "event_id",
            "type": "STRING",
          },
          Object {
            "description": "Time when event happened",
            "mode": "REQUIRED",
            "name": "timestamp",
            "type": "TIMESTAMP",
          },
          Object {
            "description": "Tracking id, also called DeviceID in some contexes, use this primarily to identify a singular user",
            "mode": "REQUIRED",
            "name": "tracking_id",
            "type": "STRING",
          },
        ],
      },
      "timePartitioning": Object {
        "expirationMS": "7776000000",
        "field": "timestamp",
        "type": "DAY",
      },
    },
    "name": "embark_track",
    "rows": Array [],
  },
]
`;

exports[`insert dynamic fields in aggregate 2`] = `
Array [
  Object {
    "config": Object {
      "description": "",
      "schema": Object {
        "fields": Array [
          Object {
            "description": "String name of event, for example screen_view_offer",
            "mode": "REQUIRED",
            "name": "event",
            "type": "STRING",
          },
          Object {
            "description": "Unique ID of the event",
            "mode": "REQUIRED",
            "name": "event_id",
            "type": "STRING",
          },
          Object {
            "description": "",
            "fields": Array [
              Object {
                "description": "",
                "mode": "NULLABLE",
                "name": "property_store_hello",
                "type": "STRING",
              },
              Object {
                "description": "",
                "mode": "NULLABLE",
                "name": "property_store_personal_number",
                "type": "STRING",
              },
            ],
            "mode": "NULLABLE",
            "name": "properties_embark_track",
            "type": "STRUCT",
          },
          Object {
            "description": "Time when event happened",
            "mode": "REQUIRED",
            "name": "timestamp",
            "type": "TIMESTAMP",
          },
          Object {
            "description": "Tracking id, also called DeviceID in some contexes, use this primarily to identify a singular user",
            "mode": "REQUIRED",
            "name": "tracking_id",
            "type": "STRING",
          },
        ],
      },
      "timePartitioning": Object {
        "expirationMS": "7776000000",
        "field": "timestamp",
        "type": "DAY",
      },
    },
    "name": "aggregate",
    "rows": Array [],
  },
  Object {
    "config": Object {
      "description": "",
      "schema": Object {
        "fields": Array [
          Object {
            "description": "String name of event, for example screen_view_offer",
            "mode": "REQUIRED",
            "name": "event",
            "type": "STRING",
          },
          Object {
            "description": "Unique ID of the event",
            "mode": "REQUIRED",
            "name": "event_id",
            "type": "STRING",
          },
          Object {
            "description": "Time when event happened",
            "mode": "REQUIRED",
            "name": "timestamp",
            "type": "TIMESTAMP",
          },
          Object {
            "description": "Tracking id, also called DeviceID in some contexes, use this primarily to identify a singular user",
            "mode": "REQUIRED",
            "name": "tracking_id",
            "type": "STRING",
          },
        ],
      },
      "timePartitioning": Object {
        "expirationMS": "7776000000",
        "field": "timestamp",
        "type": "DAY",
      },
    },
    "name": "embark_track",
    "rows": Array [],
  },
]
`;
